--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
           <p>The Brooklyn Library is a free workspace, a large number of books and a cozy coffee shop inside</p>
 
           <div>
-            <img src="./img/woman.png" alt="woman">
-            <img src="./img/sculp.png" alt="sculps">
-            <img src="./img/book-shelfs.png" alt="book shelfs">
+            <img src="woman.png" alt="woman">
+            <img src="sculp.png" alt="sculps">
+            <img src="book-shelfs.png" alt="book shelfs">
           </div>
         </section>
 
@@ -80,7 +80,7 @@
               </li>
 
               <li class="card-img">
-                <img src="./img/book-1.png" alt="The Book Eaters">
+                <img src="book-1.png" alt="The Book Eaters">
               </li>
             </ul>
 
@@ -103,7 +103,7 @@
               </li>
 
               <li class="card-img">
-                <img src="./img/book-3.png" alt="The Book Eaters">
+                <img src="book-3.png" alt="The Book Eaters">
               </li>
             </ul>
 
@@ -127,7 +127,7 @@
               </li>
 
               <li class="card-img">
-                <img src="./img/book-2.png" alt="The Book Eaters">
+                <img src="book-2.png" alt="The Book Eaters">
               </li>
             </ul>
 
@@ -149,7 +149,7 @@
               </li>
 
               <li class="card-img">
-                <img src="./img/book-4.png" alt="The Book Eaters">
+                <img src="book-4.png" alt="The Book Eaters">
               </li>
             </ul>
           </div>
